--- a/public/css/extra.css
+++ b/public/css/extra.css
@@ -9,3 +9,61 @@
   width: 250px;
   margin: 0px;
 }
+
+.wa-link {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.wa-link a {
+  margin-top: 20px;
+}
+
+.conten-y {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
+}
+
+.conten-x {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+}
+
+.conten-u {
+  margin-right: 75px;
+}
+
+.tm-rect-img {
+  display: block;
+  width: auto;
+  height: auto;
+  max-width: 170px;
+  max-height: 170px;
+  object-fit: contain; /* jaga proporsi agar tidak terpotong */
+  border: 6px solid #1e2530;
+  border-radius: 8px;
+  margin: 0 auto 15px auto;
+
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.tm-rect-img:hover {
+  transform: scale(1.03);
+}
+
+@media (max-width: 767px) {
+  .tm-rect-img {
+    max-width: 100%;
+    height: auto;
+  }
+}
